# GameTheory

./: README.markdown  pyproject.toml  requirements.txt
notebooks/: glico_game.ipynb  hawk_dove_bourgeois_game.ipynb
notebooks/.ipynb_checkpoints/: glico_game-checkpoint.ipynb  hawk_dove_bourgeois_game-checkpoint.ipynb
