[tool.poetry]
name = "summer_workshop"
version = "0.1.0"
description = ""
authors = ["omura <omura@nlp.ist.i.kyoto-u.ac.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.1.7"
pandas = "^1.3.2"
matplotlib = "^3.4.3"
tqdm = "^4.62.2"
ipywidgets = "^7.6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
